**  denotes quite substantial/important changes
*** denotes really big changes 
ISSUES:

1.7-5

* fix so that 'main' is not ignored by plot.gam (got broken in 1.7-0 
  object orientation of smooth plotting)

* Duchon spline constructor now catches k > number of data errors.

* fix of a gamm bug whereby a model with no smooths would fail after 
  fitting because of a missing smoothing parameter vector.

* fix to bug introduced to gam/bam in 1.7-3, whereby '...' were passed to 
  gam.control, instead of passing on to fitting routines. 

* fix of some compiler warnings in matrix.c 

* fix to indexing bug in monotonic additive model example in ?pcls.

1.7-4

* Fix for single letter typo bug in C code called by slanczos, could 
  actually segfault on matrices of less than 10 by 10.

* matrix.c:Rlanczos memory error fix in convergence testing of -ve 
  eigenvalues.

* Catch for min.sp vector all zeroes, which could cause an ungraceful 
  failure. 

1.7-3

** "ds" (Duchon splines) smooth class added. See ?Duchon.spline

** "sos" (spline on the sphere) smooth class added. See ?Spherical.Spline.

* Extended quasi-likelihood used with RE/ML smoothness selection and 
  quasi families. 

* random subsampling code in bam, sos and tp smooths modified a little, so 
  that .Random.seed is set if it doesn't exist. 

* `control' argument changed for gam/bam/gamm to a simple list, which is 
  then passed to gam.control (or lmeControl), to match `glm'.

* Efficiency of Lanczos iteration code improved, by restructuring, and 
  calling LAPACK for the eigen decompostion of the working tri-diagonal
  matrix.

* Slight modification to `t2' marginal reparameterization, so that `main 
  effects' can be extracted more easily, if required.


1.7-2

* `polys.plot' now exported, to facilitate plotting of results for
  models involving mrf terms.

* bug fix in plot.gam --- too.far had stopped working in 1.7-0.

1.7-1

* post fitting constraint modification would fail if model matrix was 